templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: validator-network-policy
spec:
  podSelector:
    matchLabels:
      app: cosmos-validator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: horcrux
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: horcrux
